<resources>
    <string name="app_name">Vestate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="demo_address">78 /a, Maker Arcade, G.d.somani Marg, Nr Wtc., Cuffe Parade,Mumbai</string>
    <string name="irr">IRR</string>
    <string name="price_share">Price/Share</string>
    <string name="rental_yield">Rental Yield</string>
    <string name="property_type">Property Type</string>
    <string name="commercial">Commercial</string>
    <string name="residential">Residential</string>
    <string name="retail">Retail</string>
    <string name="_1_3">1% - 3%</string>
    <string name="_3_5">3% - 5%</string>
    <string name="_5_8">5% - 8%</string>
    <string name="above_8">Above 8%</string>
    <string name="rating">Rating</string>
    <string name="a1_a3">A1 - A3</string>
    <string name="b1_b3">B1 - B3</string>
    <string name="c1_c3">C1 - C3</string>
    <string name="d1_d3">D1 - D3</string>
    <string name="e1_e3">E1 - E3</string>
    <string name="postal_address">Postal Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="pan_number">PAN Number</string>
    <string name="demat_account_number">Demat Account Number</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="save">SAVE</string>
    <string name="resale_market">RESALE MARKET</string>
    <string name="market_depth">Market Depth</string>
    <string name="bid">Bid</string>
    <string name="orders">Orders</string>
    <string name="qty">Qty</string>
    <string name="offers">Offers</string>
    <string name="open">Open</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="close">Close</string>
    <string name="volume">Volume</string>
    <string name="avg_trade_price">Avg.trade price</string>
    <string name="last_traded_qty">Last traded qty</string>
    <string name="last_traded_at">Last traded at</string>
    <string name="lower_circuit">Lower circuit</string>
    <string name="upper_circuit">Upper circuit</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="total_investment">Total Investment</string>
    <string name="total_rental_income">Total Rental Income</string>
    <string name="mumbai">Mumbai</string>
    <string name="rental_income">Rental Income</string>
    <string name="new_delhi">New Delhi</string>
    <string name="bengaluru">Bengaluru</string>
    <string name="my_properties">My Properties</string>
    <string name="_44_plot_no_crown_plaza_b_h_truck_terminal_vashi">44 , Plot No , Crown Plaza, B/h Truck Terminal, Vashi</string>
    <string name="central_mall_bellandur_outer_ring_road">Central Mall,Bellandur,Outer Ring Road</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="block_m_market_near_moti_mahal_greater_kailash_part">Block M Market, Near Moti Mahal Greater Kailash Part</string>
    <string name="upfront_payment">Upfront Payment</string>
    <string name="property_funded">Property Funded</string>
    <string name="pending_decisions">Pending Decisions</string>
    <string name="_7260_valley_view_ln_undefined_peoria_michigan_62191_united_states"><u>7260 Valley View Ln undefined Peoria, Michigan 62191 United States</u></string>
    <string name="sellout">Sellout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="est_rent_unit">Est.Rent/Unit</string>
    <string name="single_family_home">Single Family Home</string>
    <string name="demo_property_details">2 Bedroom | 2 Bathroom | 1784 SQFT</string>
    <string name="property_documents"><u>Property Documents</u></string>
    <string name="lease">Lease</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="_1y">1Y</string>
    <string name="lease_term">Lease term</string>
    <string name="_46m">46M</string>
    <string name="tenant_lived_here">Tenant Lived here</string>
    <string name="_4m">4M</string>
    <string name="time_left">Time Left</string>
    <string name="payment_breakdown">Payment Breakdown</string>
    <string name="property_tax">Property Tax</string>
    <string name="financing">Financing</string>
    <string name="insurance">Insurance</string>
    <string name="hqa">HQA</string>
    <string name="management_fee">Management Fee</string>
    <string name="rent_profit">Rent Profit</string>
    <string name="rent_unit">Rent/Unit</string>
    <string name="lease_documents"><u>Lease Documents</u></string>
    <string name="property_is_financed_with_a_bank_loan">Property is financed with a Bank Loan</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="ltv">LTV</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="standing_debt">Standing Debt</string>
    <string name="condition">Condition</string>
    <string name="year_built">Year Built</string>
    <string name="last_inspection">Last Inspection</string>
    <string name="invest_now">Invest Now</string>
    <string name="no_of_shares">No. of Shares</string>
    <string name="invoice">Invoice</string>
    <string name="total">Total</string>
    <string name="buy_now">Buy Now</string>
    <string name="tera_properties_and_builders_saket">Tera Properties and Builders, Saket</string>
</resources>
