<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BusinessCategoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/property_type"
                android:textColor="#202020"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">
                <LinearLayout
                    android:id="@+id/category_commercial"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/category_commercial_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:src="@drawable/ic_category1" />
                    <TextView
                        android:id="@+id/category_commercial_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="18dp"
                        android:text="@string/commercial"
                        android:textAlignment="center"
                        android:textColor="#202020"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/category_residential"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/category_residential_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:src="@drawable/ic_category2" />
                    <TextView
                        android:id="@+id/category_residential_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="18dp"
                        android:text="@string/residential"
                        android:textAlignment="center"
                        android:textColor="#202020"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/category_retail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/category_retail_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:src="@drawable/ic_category3" />
                    <TextView
                        android:id="@+id/category_retail_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="18dp"
                        android:text="@string/retail"
                        android:textAlignment="center"
                        android:textColor="#202020"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rental_yield"
                android:textColor="#202020"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                    android:padding="10dp"
                    android:text="@string/_1_3"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:button="@drawable/checkbox"
                    android:padding="10dp"
                    android:text="@string/_3_5"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:button="@drawable/checkbox"
                    android:padding="10dp"
                    android:text="@string/_5_8"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="16dp">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                    android:padding="10dp"
                    android:text="@string/above_8"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rating"
                android:textColor="#202020"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/rating1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_buttonbg"
                    android:padding="10dp"
                    android:text="@string/a1_a3"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/rating2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_buttonbg"
                    android:padding="10dp"
                    android:text="@string/b1_b3"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/rating3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_buttonbg"
                    android:padding="10dp"
                    android:text="@string/c1_c3"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/rating4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_buttonbg"
                    android:padding="10dp"
                    android:text="@string/d1_d3"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/rating5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_buttonbg"
                    android:padding="10dp"
                    android:text="@string/e1_e3"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/log_in_button"
            android:padding="16dp"
            android:text="search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>