<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp">
    ​
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        ​
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            ​
            <ImageView
                android:id="@+id/list_item_preview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/property1"
                android:scaleType="centerCrop"/>
            ​
            <View
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorAccent" />
            ​
            <TextView
                android:id="@+id/list_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="A1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
            ​
        </RelativeLayout>
        ​
        <TextView
            android:id="@+id/list_item_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="#202020"
            android:textSize="18sp"
            android:text="@string/demo_address"/>
        ​
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#19202020" />
        ​
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            ​
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="6dp">
                ​
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    ​
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#202020"
                        android:text="@string/irr"
                        android:textAlignment="viewStart"/>
                    <TextView
                        android:id="@+id/list_item_irr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#202020"
                        android:textStyle="bold"
                        android:text=": 17%"/>
                </LinearLayout>/
                ​
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp">
                    ​
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#202020"
                        android:text="@string/price_share"
                        android:textAlignment="viewStart"/>
                    <TextView
                        android:id="@+id/list_item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#202020"
                        android:textStyle="bold"
                        android:text=": 520₹"/>
                </LinearLayout>
                ​
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="12dp">
                    ​
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#202020"
                        android:text="@string/rental_yield"
                        android:textAlignment="viewStart"/>
                    <TextView
                        android:id="@+id/list_item_rentalYield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="#202020"
                        android:textStyle="bold"
                        android:text=": 6%"/>
                </LinearLayout>
                ​
            </LinearLayout>
            <ImageView
                android:id="@+id/list_item_funded_chart"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/perc1"
                android:scaleType="centerCrop"/>
            ​
        </LinearLayout>
        ​
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="Invest Now"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />
        ​
    </LinearLayout>
    ​
</androidx.cardview.widget.CardView>